trying a different package group...

--- a/install
+++ b/install
@@ -169,7 +169,7 @@ rpm -i --root=$INSTALL_DIR --nodeps /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing @core packages..."
 yum --installroot=$INSTALL_DIR --setopt=tsflags=nodocs \
-    --setopt=group_package_types=mandatory -y groupinstall core
+    --setopt=group_package_types=mandatory -y groupinstall "minimal install"
 
 echo "==> Installing additional packages..."
 yum --installroot=$INSTALL_DIR --setopt=tsflags=nodocs install -y less man openssh-clients sudo vim-minimal which wget
