Check for missing keys via 'rpm -qa | grep -i gpg'

--- a/install
+++ b/install
@@ -154,7 +154,7 @@ if [[ $? -gt 0 ]]; then
     rpm --import 8E1431D5.txt
 fi
 
-gpg --list-keys | grep a29cb19c > /dev/null
+rpm -qa | grep -i gpg | grep a29cb19c > /dev/null
 if [[ $? -gt 0 ]]; then
     echo "Adding gpg signing keys 4096R/A29CB19C"
     curl -SLO https://getfedora.org/static/A29CB19C.txt
