--- a/install
+++ b/install
@@ -168,8 +168,8 @@ echo "==> Installing rpm package..."
 rpm -i --root=$INSTALL_DIR --nodeps /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing @core packages..."
-#yum --installroot=$INSTALL_DIR --setopt=tsflags=nodocs \
-#    --setopt=group_package_types=mandatory -y groupinstall "minimal install"
+dnf --installroot=$INSTALL_DIR --setopt=tsflags=nodocs \
+    --setopt=group_package_types=mandatory -y groupinstall "Minimal Install"
 
 echo "==> Installing additional packages..."
 dnf --installroot=$INSTALL_DIR --setopt=tsflags=nodocs install -y less man openssh-clients sudo vim-minimal which wget
