--- a/install
+++ b/install
@@ -162,10 +162,10 @@ if [[ $? -gt 0 ]]; then
 fi
 set -e
 
-rpm -K /var/tmp/$RELEASE_PACKAGE
+#rpm -K /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing rpm package..."
-rpm -i --root=$INSTALL_DIR --nodeps /var/tmp/$RELEASE_PACKAGE
+dnf --installroot=$INSTALL_DIR install /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing Minimal Install group..."
 dnf --installroot=$INSTALL_DIR install -y group "Minimal Install"
