--- a/install
+++ b/install
@@ -164,7 +164,7 @@ set -e
 
 rpm -K /var/tmp/$RELEASE_PACKAGE
 
-echo "==> Installing rpm package..."
+echo "==> Installing $RELEASE_PACKAGE..."
 dnf --installroot=$INSTALL_DIR install /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing Minimal Install group..."
