--- a/install
+++ b/install
@@ -166,7 +166,7 @@ set -e
 rpm -K /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing $RELEASE_PACKAGE..."
-dnf --installroot=$INSTALL_DIR --releasever=$RELEASE install /var/tmp/$RELEASE_PACKAGE
+dnf --installroot=$INSTALL_DIR --releasever=$RELEASE install -y /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing Minimal Install group..."
 dnf --installroot=$INSTALL_DIR install -y group "Minimal Install"
