--- a/install
+++ b/install
@@ -174,6 +174,9 @@ dnf --installroot=$INSTALL_DIR -y group install "Minimal Install"
 echo "==> Installing additional packages..."
 dnf --installroot=$INSTALL_DIR --setopt=tsflags=nodocs install -y less man openssh-clients sudo vim-minimal which wget
 
+echo "==> Updating packages..."
+dnf --installroot=$INSTALL_DIR -y update
+
 echo "==> Cleaning up yum cache..."
 dnf --installroot=$INSTALL_DIR clean all
 
