Install docs with packages

--- a/install
+++ b/install
@@ -172,7 +172,7 @@ echo "==> Installing Minimal Install group..."
 dnf --installroot=$INSTALL_DIR -y group install "Minimal Install"
 
 echo "==> Installing additional packages..."
-dnf --installroot=$INSTALL_DIR --setopt=tsflags=nodocs install -y less man openssh-clients sudo vim-minimal which wget
+dnf --installroot=$INSTALL_DIR install -y less man openssh-clients sudo vim-minimal which wget
 
 echo "==> Updating packages..."
 dnf --installroot=$INSTALL_DIR -y update
