--- a/install
+++ b/install
@@ -17,7 +17,7 @@ cat <<EOF
 Install and modify Fedora in a given directory in a given directory using a given mirror
 
 Usage:
-  $0 -d <INSTALL_DIR> -m <MIRROR> -r <RELEASE_PACKAGE> -i <IMAGE_NAME> -p <NAME> -D <DESC> -u <DOCS>
+  $0 -d <INSTALL_DIR> -m <MIRROR> -R <RELEASE> -r <RELEASE_PACKAGE> -i <IMAGE_NAME> -p <NAME> -D <DESC> -u <DOCS>
 
 Example:
   $0 -d /data/chroot -m http://fedora.bhs.mirrors.ovh.net/linux/releases/22/Server/x86_64/os/Packages/f -r fedora-release-22-1.noarch.rpm -i fedora-22 -p "Fedora 22 LX Brand" -D "Fedora 64-bit lx-brand image." -u https://docs.joyent.com/images/lx-brand-beta
@@ -25,6 +25,7 @@ Example:
 OPTIONS:
   -d A path to the install directory
   -m A URL for the desired archive mirror
+  -R The release of Fedora (e.g. 22)
   -r The release package used for installing Fedora
   -i The name of the image. This is used for naming the tarball. 
   -p The proper name of the image. Use quotes. This is used in the MOTD and /etc/product file.
@@ -37,14 +38,14 @@ EOF
 
 INSTALL_DIR=
 MIRROR=
-RELEASE=22
+RELEASE=
 RELEASE_PACKAGE=
 IMAGE_NAME=
 NAME=
 DESC=
 DOCS=
 
-while getopts "hd:m:r:i:p:D:u:" OPTION
+while getopts "hd:m:R:r:i:p:D:u:" OPTION
 do
   case $OPTION in
     h)
@@ -56,6 +57,9 @@ do
       ;;
     m)
       MIRROR=${OPTARG}
+      ;;
+    R)
+      RELEASE_PACKAGE=${OPTARG}
       ;;
     r)
       RELEASE_PACKAGE=${OPTARG}
@@ -96,6 +100,11 @@ fi
 
 if [[ -z ${MIRROR} ]]; then
   echo "Error: missing mirror (-m) value"
+  exit 1
+fi
+
+if [[ -z ${RELEASE} ]]; then
+  echo "Error: missing release (-R) value"
   exit 1
 fi
 
@@ -142,12 +151,21 @@ wget -O /var/tmp/$RELEASE_PACKAGE $MIRROR/$RELEASE_PACKAGE
 echo "==> Verifying $RELEASE_PACKAGE..."
 
 # Check if we already imported the signing key: https://getfedora.org/keys/
+# pub  4096R/95A43F54 2013-11-14 Fedora (21) <fedora@fedoraproject.org>
+#  Key fingerprint = 6596 B8FB ABDA 5227 A9C5 B59E 89AD 4E87 95A4 3F54
+#
 # pub  4096R/8E1431D5 2014-07-09 Fedora (22) <fedora@fedoraproject.org>
 #  Key fingerprint = C527 EA07 A934 9B58 9C35 E1BF 11AD C094 8E14 31D5
 #
 # pub  4096R/A29CB19C 2014-07-09 Fedora Secondary (22) <fedora@fedoraproject.org>
 #  Key fingerprint = B467 FA46 E2CE 5FAC 3499 10C2 D8D1 FA8C A29C B19C
-set +e 
+set +e
+rpm -qa | grep -i gpg | grep 95A43F54 > /dev/null
+if [[ $? -gt 0 ]]; then
+    echo "Adding gpg signing keys 4096R/95A43F54"
+    curl -SLO https://getfedora.org/static/95A43F54.txt
+    rpm --import 95A43F54.txt
+fi
 rpm -qa | grep -i gpg | grep 8e1431d5 > /dev/null
 if [[ $? -gt 0 ]]; then
     echo "Adding gpg signing keys 4096R/8E1431D5"
