--- a/install
+++ b/install
@@ -146,7 +146,7 @@ fi
 rpm --root=$INSTALL_DIR --initdb
 
 echo "==> Getting $RELEASE_PACKAGE..."
-curl -o /var/tmp/$RELEASE_PACKAGE $MIRROR/$RELEASE_PACKAGE
+curl -sSo /var/tmp/$RELEASE_PACKAGE $MIRROR/$RELEASE_PACKAGE
 
 echo "==> Verifying $RELEASE_PACKAGE..."
 
@@ -177,7 +177,7 @@ for KEY in ${KEYS[@]}; do
   rpm -qa | grep -i gpg | grep -i $KEY > /dev/null
   if [[ $? -gt 0 ]]; then
       echo "===> Adding gpg signing keys $KEY"
-      curl -SLO https://getfedora.org/static/$KEY.txt
+      curl -sSLO https://getfedora.org/static/$KEY.txt
       rpm --import $KEY.txt
       rm -rf $KEY.txt
   fi
