--- a/install
+++ b/install
@@ -240,12 +240,12 @@ OVERRIDE
 done
 
 echo "==> Disabling PasswordAuthentication"
-sed -ri s/^#?PasswordAuthentication\ no/PasswordAuthentication\ no/ -i $INSTALL_DIR/etc/ssh/sshd_config
-sed -ri s/^#?PasswordAuthentication\ yes/PasswordAuthentication\ no/ -i $INSTALL_DIR/etc/ssh/sshd_config
+echo "" >> $INSTALL_DIR/etc/ssh/sshd_config
+echo "PasswordAuthentication no" >> $INSTALL_DIR/etc/ssh/sshd_config
 
 echo "==> Enabling UsePrivilegeSeparation (default is 'sandbox')"
-sed -ri s/^#?UsePrivilegeSeparation\ yes/UsePrivilegeSeparation\ yes/ -i $INSTALL_DIR/etc/ssh/sshd_config
-sed -ri s/^#?UsePrivilegeSeparation\ sandbox/UsePrivilegeSeparation\ yes/ -i $INSTALL_DIR/etc/ssh/sshd_config
+echo "UsePrivilegeSeparation yes" >> $INSTALL_DIR/etc/ssh/sshd_config
+
 
 echo "==> Creating /etc/motd"
 cat << MOTD > $INSTALL_DIR/etc/motd
