--- a/install
+++ b/install
@@ -193,10 +193,10 @@ echo "==> Installing $RELEASE_PACKAGE..."
 dnf --installroot=$INSTALL_DIR --releasever=$RELEASE install -y /var/tmp/$RELEASE_PACKAGE
 
 echo "==> Installing Minimal Install group..."
-dnf --installroot=$INSTALL_DIR group -y install "Minimal Install"
+dnf --installroot=$INSTALL_DIR group -y install "Base"
 
 echo "==> Installing additional packages..."
-dnf --installroot=$INSTALL_DIR install -y gettext less man openssh-clients rsyslog sudo vim which wget
+dnf --installroot=$INSTALL_DIR install -y gettext
 
 echo "==> Updating packages..."
 dnf --installroot=$INSTALL_DIR -y update
