--- a/install
+++ b/install
@@ -192,8 +192,8 @@ rpm -K /var/tmp/$RELEASE_PACKAGE
 echo "==> Installing $RELEASE_PACKAGE..."
 dnf --installroot=$INSTALL_DIR --releasever=$RELEASE install -y /var/tmp/$RELEASE_PACKAGE
 
-echo "==> Installing Minimal Install group..."
-dnf --installroot=$INSTALL_DIR group -y install "Base"
+echo "==> Installing Fedora Server Edition group..."
+dnf --installroot=$INSTALL_DIR group -y install "Fedora Server Edition"
 
 echo "==> Installing additional packages..."
 dnf --installroot=$INSTALL_DIR install -y gettext
