Don't install abrt-addon* packages

--- a/install
+++ b/install
@@ -195,6 +195,7 @@ dnf --installroot=$INSTALL_DIR --releasever=$RELEASE install -y /var/tmp/$RELEAS
 echo "==> Installing Fedora Server Edition group..."
 dnf --installroot=$INSTALL_DIR \
       --setopt=group_package_types=default,mandatory \
+      --exclude=abrt-addon* \
       --exclude=dracut-config-rescue \
       --exclude=plymouth \
       group -y install "Fedora Server Edition"
