--- a/install
+++ b/install
@@ -153,9 +153,6 @@ echo "==> Verifying $RELEASE_PACKAGE..."
 
 # Check if we already imported the signing key: https://getfedora.org/keys/
 #
-# pub  4096R/34EC9CBA 2015-02-17 Fedora (23) <fedora-23-primary@fedoraproject.org>
-#  Key fingerprint = EF45 5106 80FB 0232 6B04 5AFB 3247 4CF8 34EC 9CBA
-#
 # pub  4096R/81B46521 2015-07-25 Fedora (24) <fedora-24-primary@fedoraproject.org>
 #  Key fingerprint = 5048 BDBB A5E7 76E5 47B0 9CCC 73BD E983 81B4 6521
 #
@@ -166,7 +163,7 @@ echo "==> Verifying $RELEASE_PACKAGE..."
 #  Key fingerprint = E641 850B 77DF 4353 78D1 D7E2 812A 6B4B 64DA B85D
 
 set +e
-KEYS=( 34EC9CBA 81B46521 FDB19C98 64DAB85D )
+KEYS=( 81B46521 FDB19C98 64DAB85D )
 
 for KEY in ${KEYS[@]}; do
   # ${VAR_NAME,,} converts to lowercase
