--- a/install
+++ b/install
@@ -165,7 +165,7 @@ echo "==> Verifying $RELEASE_PACKAGE..."
 set +e
 KEYS=( 81B46521 FDB19C98 64DAB85D )
 
-for KEY in ${KEYS[@]}; do
+for KEY in "${KEYS[@]}"; do
   # ${VAR_NAME,,} converts to lowercase
   rpm -qi gpg-pubkey-${KEY,,} > /dev/null
   if [[ $? -gt 0 ]]; then
@@ -224,9 +224,9 @@ echo "LANG=\"en_US.UTF-8\"" > $INSTALL_DIR/etc/locale.conf
 # TODO: This should be removed when the relevant cgroup etc support is in
 # the platform.
 SERVICES=( systemd-hostnamed systemd-localed systemd-timedated timedatex )
-echo "==> Adding systemd overrides for: ${SERVICES[@]}"
 
-for SERVICE in ${SERVICES[@]}; do
+for SERVICE in "${SERVICES[@]}"; do
+	echo "==> Adding systemd overrides for: $SERVICE"
   OVERRIDE_DIR=$INSTALL_DIR/etc/systemd/system/${SERVICE}.service.d
   mkdir -p $OVERRIDE_DIR
 
@@ -241,9 +241,9 @@ OVERRIDE
 done
 
 SERVICES=( httpd )
-echo "==> Adding systemd overrides for: ${SERVICES[@]}"
 
-for SERVICE in ${SERVICES[@]}; do
+for SERVICE in "${SERVICES[@]}"; do
+	echo "==> Adding systemd overrides for: $SERVICE"
   OVERRIDE_DIR=$INSTALL_DIR/etc/systemd/system/${SERVICE}.service.d
   mkdir -p $OVERRIDE_DIR
 
